yew-functional-macro/tests/functional_macro/bad-return-type-fail.stderr
error[E0308]: mismatched types
  --> $DIR/bad-return-type-fail.rs:10:27
   |
10 | fn comp_1(_props: &Props) {}
   |                           ^^ expected enum `yew::virtual_dom::vnode::VNode`, found `()`

error[E0308]: mismatched types
  --> $DIR/bad-return-type-fail.rs:14:5
   |
12 | #[functional_component(Comp)]
   | ----------------------------- expected `yew::virtual_dom::vnode::VNode` because of return type
13 | fn comp(_props: &Props) -> u32 {
14 |     1
   |     ^ expected enum `yew::virtual_dom::vnode::VNode`, found integer
